--- a/song.yaml
+++ b/song.yaml
@@ -1,12 +1,12 @@
 song:
-- note note note note+ : 1
+  note note note note+ : 1
 
 note:
-- C : 1
-- D : 1
-- E : 1
-- F : 1
-- G : 1
-- A : 1
-- B : 1
+  C : 1
+  D : 1
+  E : 1
+  F : 1
+  G : 1
+  A : 1
+  B : 1
 
